# Projet-Image-M1-Harmony

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  run.sh
assets/img/: 14_Perroquet_proj2.ppm  Gnar.ppm  main.cpp
src/: harmonization.cpp  harmonization.hpp  image.cpp  image.h  image.hpp  interface.cpp  interface.hpp  main.cpp  mosaique.cpp  mosaique.hpp  rendering.cpp  rendering.hpp  template.cpp  template.h  template.hpp
